feat(controllers): Add method to get all filters - Route 'get /objects/filters' now returns all available filters - OpenAPI documenation for the methoid
